--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 	<style>
 		.head-image {
-			background-image: url("22.webp");
-			height: 300px;
-			width: 1000px;
+			background-image: url("22.avif");
+			height: 350px;
+			width: 1150px;
 			padding-top: 30px;
 			background-size: cover;
 		}
@@ -132,7 +132,7 @@
 	<div class="maintext">
 
 		<div class="head-image">
-			<h1 style="color:rgb(22, 15, 15);"> <strong> Air Pollution and its impact</strong></h1>
+			<h1 style="color:rgb(14, 9, 155);font-size: 40px;"> <strong> Air Pollution and its impact</strong></h1>
 		</div>
 
 		<p>
