--- a/ab.html
+++ b/ab.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="vendors1/css/fluid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="C:\Users\hp\Desktop\final che\final che\che website\about-style.css">
+    <link rel="stylesheet" type="text/css" href="about-style.css">
 
 </head>
 
